; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_free_user_labels.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_free_user_labels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_3__* }

@symtable_user = common dso_local global %struct.TYPE_3__* null, align 8
@symtable_user_size = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @free_user_labels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_user_labels() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @symtable_user, align 8
  %2 = icmp ne %struct.TYPE_3__* %1, null
  br i1 %2, label %3, label %18

3:                                                ; preds = %0
  br label %4

4:                                                ; preds = %7, %3
  %5 = load i64, i64* @symtable_user_size, align 8
  %6 = icmp ugt i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @symtable_user, align 8
  %9 = load i64, i64* @symtable_user_size, align 8
  %10 = add i64 %9, -1
  store i64 %10, i64* @symtable_user_size, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = call i32 @free(%struct.TYPE_3__* %13)
  br label %4

15:                                               ; preds = %4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @symtable_user, align 8
  %17 = call i32 @free(%struct.TYPE_3__* %16)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @symtable_user, align 8
  br label %18

18:                                               ; preds = %15, %0
  ret void
}

declare dso_local i32 @free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
